--- a/configs/imx8mm_mg3_defconfig
+++ b/configs/imx8mm_mg3_defconfig
@@ -131,6 +131,7 @@ CONFIG_PINCTRL_IMX8M=y
 CONFIG_DM_REGULATOR=y
 CONFIG_DM_REGULATOR_FIXED=y
 CONFIG_DM_REGULATOR_GPIO=y
+CONFIG_DM_PCA953X=y
 CONFIG_DM_RTC=y
 CONFIG_RTC_EMULATION=y
 CONFIG_MXC_UART=y
@@ -138,7 +139,6 @@ CONFIG_SYSRESET=y
 CONFIG_SYSRESET_PSCI=y
 CONFIG_DM_THERMAL=y
 CONFIG_IMX_TMU=y
-CONFIG_USB_TCPC=y
 CONFIG_USB=y
 CONFIG_USB_GADGET=y
 CONFIG_USB_STORAGE=y
