--- a/configs/imx8mm_mg3_defconfig
+++ b/configs/imx8mm_mg3_defconfig
@@ -178,3 +178,5 @@ CONFIG_EFI_CAPSULE_ON_DISK=y
 CONFIG_EFI_CAPSULE_FIRMWARE_RAW=y
 CONFIG_EFI_SECURE_BOOT=y
 CONFIG_IMX8M_4G_LPDDR4=y
+CONFIG_USE_DEFAULT_ENV_FILE=y
+CONFIG_DEFAULT_ENV_FILE="ptt/ptt-env"
