--- a/tools/env/fw_env.config
+++ b/tools/env/fw_env.config
@@ -8,8 +8,8 @@
 
 # NOR example
 # MTD device name	Device offset	Env. size	Flash sector size	Number of sectors
-/dev/mtd1		0x0000		0x4000		0x4000
-/dev/mtd2		0x0000		0x4000		0x4000
+# /dev/mtd1		0x0000		0x4000		0x4000
+# /dev/mtd2		0x0000		0x4000		0x4000
 
 # MTD SPI-dataflash example
 # MTD device name	Device offset	Env. size	Flash sector size	Number of sectors
@@ -36,3 +36,7 @@
 # UBI volume by name
 #/dev/ubi0:env		0x0		0x1f000		0x1f000
 #/dev/ubi0:env-redund	0x0		0x1f000		0x1f000
+
+# Second entry is redundant env
+/dev/mmcblk2boot0       -0x2000         0x1000
+/dev/mmcblk2boot0       -0x1000         0x1000
